port to mc 1.21/1.21.1

--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,15 @@ version = project.mod_version
 group = project.maven_group
 mod_name = project.mod_name
 mod_id = project.mod_id
-fabric_version_range = project.fabric_version_range
-mc_version_range = project.mc_version_range
+loader_version = project.loader_version
+minecraft_version_range = project.minecraft_version_range
 java_version_range = project.java_version_range
+cloth_config_version = project.cloth_config_version
+modmenu_version = project.modmenu_version
 jade_version = project.jade_version
 
 base {
-	archivesName = project.mod_name
+	archivesName = project.archives_base_name
 }
 
 repositories {
@@ -46,11 +48,11 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation "com.terraformersmc:modmenu:7.0.1"
-	modApi("me.shedaniel.cloth:cloth-config-fabric:11.1.118") {
+	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+	modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
-	include "me.shedaniel.cloth:cloth-config-fabric:11.1.118"
+	include "me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}"
 
 	modImplementation "curse.maven:jade-324717:${project.jade_version}"
 }
@@ -59,19 +61,22 @@ processResources {
 	inputs.property "version", version
 	inputs.property "mod_id", mod_id
 	inputs.property "mod_name", mod_name
-	inputs.property "fabric_version_range", fabric_version_range
-	inputs.property "mc_version_range", mc_version_range
+	inputs.property "loader_version", loader_version
+	inputs.property "minecraft_version_range", minecraft_version_range
 	inputs.property "java_version_range", java_version_range
+	inputs.property "cloth_config_version", cloth_config_version
+	inputs.property "modmenu_version", modmenu_version
 	inputs.property "jade_version", jade_version
 
-			filesMatching("fabric.mod.json") {
-		expand "version": version, "mod_id": mod_id, "mod_name": mod_name, "fabric_version_range": fabric_version_range,
-				"mc_version_range": mc_version_range, "java_version_range": java_version_range, "jade_version": jade_version
+	filesMatching("fabric.mod.json") {
+		expand  "version": version, "mod_id": mod_id, "mod_name": mod_name, "loader_version": loader_version,
+				"minecraft_version_range": minecraft_version_range, "java_version_range": java_version_range,
+				"cloth_config_version" : cloth_config_version, "modmenu_version": modmenu_version, "jade_version": jade_version
 	}
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
+	it.options.release = 21
 }
 
 java {
@@ -80,8 +85,8 @@ java {
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = JavaVersion.VERSION_21
+	targetCompatibility = JavaVersion.VERSION_21
 }
 
 jar {
@@ -94,7 +99,7 @@ jar {
 publishing {
 	publications {
 		create("mavenJava", MavenPublication) {
-			artifactId = project.mod_id
+			artifactId = project.archives_base_name
 			from components.java
 		}
 	}
@@ -105,5 +110,12 @@ publishing {
 		// Notice: This block does NOT have the same function as the block in the top level.
 		// The repositories here will be used for publishing your artifact, not for
 		// retrieving dependencies.
+		maven {
+			url = project.findProperty("maven.url") ?: System.getenv("MAVEN_URL")
+			credentials {
+				username=project.findProperty("maven.user") ?: System.getenv("MAVEN_USER")
+				password=project.findProperty("maven.password") ?: System.getenv("MAVEN_PASSWORD")
+			}
+		}
 	}
 }
