--- a/gradle.properties
+++ b/gradle.properties
@@ -4,20 +4,23 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.10
+minecraft_version=1.21
+minecraft_version_range=~1.21
+yarn_mappings=1.21+build.9
 loader_version=0.15.11
 
 # Mod Properties
 mod_id=undeadnights
 mod_name=UndeadNights
-mod_version=0.8.0-Fabric-mc1.20.1
+mod_version=0.8.0-Fabric-mc1.21
 maven_group=net.petemc.undeadnights
-
-fabric_version_range=>=0.15.11
-mc_version_range=>=1.20.1
-java_version_range=>=17
+archives_base_name=UndeadNights
 
 # Dependencies
-fabric_version=0.92.2+1.20.1
-jade_version=5771000
+fabric_version=0.102.0+1.21
+
+# Misc Dependencies
+java_version_range=>=21
+cloth_config_version=15.0.127
+modmenu_version=11.0.1
+jade_version=5571122
