--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ mod_version=0.8.1-Fabric-mc1.20.1
 maven_group=net.petemc.undeadnights
 
 fabric_version_range=>=0.15.11
-mc_version_range=>=1.20.1
+mc_version_range=~1.20
 java_version_range=>=17
 
 # Dependencies
